[project]
name = "mcp-file-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-file-utils = "main:main"
start-server = "server:start"
file-server = "server:main" 

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mcp[cli]"
]
